[package]
name = "btl"
version = "0.2.5"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
Github Repo: https://github.com/znx3p0/btlsh
Btl is a simple library that makes shell scripting with rust easier.
It was originally written with the purposes of being used for build.rs files,
but it can be used for more complex purposes.

It's main premise is about making shell scripting easier to work with rust.
This works both on windows and unix machines. Originally designed in linux,
not tested on Windows or Mac yet, but they should work since the library is platform-agnostic."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"]}
quote = "1.0"

[lib]
proc-macro = true