[package]
name = "btl"
version = "0.3.0"
authors = ["Jose Salazar <znx3p0@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/btl/"
repository = "https://github.com/znx3p0/btlsh"
description = """
Simple shell scripting in rust.
Github Repo: https://github.com/znx3p0/btlsh
"""


# set tokio as the only optional dependency needed for
#   the asynchronous version of the shell
[dependencies]
tokio = { version = "1", features = [ "process" ], optional = true }

# tests
[dev-dependencies]
tokio = { version = "1", features = [ "full" ] }

[features]
default = []
tokio_shell = [ "tokio" ]

